# AoT

./: .gitignore  LICENSE  Makefile  README.md  aot.ipynb  aot.py  pyproject.toml  start.bat  start.sh
.claude/: settings.local.json
aot/: __init__.py  cli.py  core.py  numerical.py  parser.py  utils.py  visualization.py
notebooks/: 01_1d_example.ipynb  02_2d_example.ipynb  03_3d_example.ipynb
server/: main.py  schemas.py
tests/: test_api.py  test_core.py  test_numerical.py  test_parser.py  test_visualization.py
web/: index.html  package-lock.json  package.json
web/public/: index.html
web/src/: App.jsx
web/src/api/: client.js
web/src/components/: ErrorDisplay.jsx  FunctionInput.jsx  OrderInput.jsx  PlotDisplay.jsx  PointInput.jsx  ResultDisplay.jsx
web/src/styles/: main.css
