[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aot"
version = "0.3.0"
description = "Taylor serisi açılımı için sembolik ve sayısal hesap paketi"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "sympy>=1.12",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "antlr4-python3-runtime==4.11.1",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.0.0",
    "plotly>=5.15",
]

[project.optional-dependencies]
viz = ["plotly>=5.15"]
latex = ["latex2sympy2"]
notebook = ["jupyter"]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "httpx>=0.27.0",
]
all = ["aot[viz,latex,notebook,dev]"]

[project.scripts]
aot = "aot.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["aot*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
